--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,9 +66,10 @@ dependencies {
     compile 'com.android.support:support-v4:23+'
     compile 'com.android.support:recyclerview-v7:23+'
     compile project(':ui')
-//    compile 'com.google.firebase:firebase-core:9.0.0'
-//    compile 'com.google.firebase:firebase-messaging:9.0.0'
+    //    compile 'com.google.firebase:firebase-core:9.0.0'
+    //    compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile files('libs/commons-io-2.5.jar')
 }
 
 
