--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
 //    compile 'com.google.firebase:firebase-core:9.0.0'
 //    compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'com.github.bumptech.glide:glide:3.5.2'
+    compile 'com.meizu.flyme.internet:push-internal:3.6.3@aar'
 }
 
 
