--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,21 @@
 
     <uses-permission android:name="com.tencent.qcloud.timchat.permission.MIPUSH_RECEIVE" />
 
+
+
+    <!--mz push-->
+    <!-- 兼容flyme5.0以下版本，魅族内部集成pushSDK必填，不然无法收到消息-->
+    <uses-permission android:name="com.meizu.flyme.push.permission.RECEIVE"></uses-permission>
+    <permission android:name="com.tencent.qcloud.timchat.push.permission.MESSAGE" android:protectionLevel="signature"/>
+    <uses-permission android:name="com.tencent.qcloud.timchat.push.permission.MESSAGE"></uses-permission>
+
+    <!--  兼容flyme3.0配置权限-->
+    <uses-permission android:name="com.meizu.c2dm.permission.RECEIVE" />
+    <permission android:name="com.tencent.qcloud.timchat.permission.C2D_MESSAGE"
+        android:protectionLevel="signature"></permission>
+    <uses-permission android:name="com.tencent.qcloud.timchat.permission.C2D_MESSAGE"/>
+
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -25,7 +40,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
- <meta-data android:name="com.tencent.rdm.uuid" android:value="a2af72ec-a731-46eb-8501-0477e34702f3" />
+ <meta-data android:name="com.tencent.rdm.uuid" android:value="83b3186d-0ef4-40e4-83ca-ced776b1ee1e" />
         <activity android:name=".ui.SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -213,6 +228,24 @@
             <!--</intent-filter>-->
         <!--</service>-->
         <!-- firebase -->
+
+
+        <!--mz push-->
+        <!-- push应用定义消息receiver声明 -->
+        <receiver android:name="com.tencent.qcloud.timchat.utils.MeizuPushMessageReceiver">
+            <intent-filter>
+                <!-- 接收push消息 -->
+                <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
+                <!-- 接收register消息 -->
+                <action android:name="com.meizu.flyme.push.intent.REGISTER.FEEDBACK" />
+                <!-- 接收unregister消息-->
+                <action android:name="com.meizu.flyme.push.intent.UNREGISTER.FEEDBACK"/>
+                <!-- 兼容低版本Flyme3推送服务配置 -->
+                <action android:name="com.meizu.c2dm.intent.REGISTRATION" />
+                <action android:name="com.meizu.c2dm.intent.RECEIVE" />
+                <category android:name="com.tencent.qcloud.timchat"></category>
+            </intent-filter>
+        </receiver>
 
 
 
